fixed text align
text would just stick to the left side when the width was below 1200px

--- a/index.css
+++ b/index.css
@@ -59,4 +59,5 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
+	text-align: center;
 }
